test/visibility/errors/issue-21289-2.bad
issue-21289-2.chpl:10: warning: an implicit module named 'issue-21289-2' is being introduced to contain file-scope code
issue-21289-2.chpl:12: error: 'bar' undeclared (first use this function)
